<resources>
    <string name="app_name">Firebase auth</string>
    <string name="sign_in">Sign in</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="or">Or</string>
    <string name="create_account">Create account</string>
    <string name="reset_password">Reset password</string>
    <string name="you_are_signed_in">You are signed in</string>
    <string name="start" translatable="false">Start</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_out">Sign out</string>

</resources>